charla-teis-2/20-deploy-versions/10-v1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versions-v1-deployment
  labels:
    app: versions-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: versions-v1
  template:
    metadata:
      labels:
        app: versions-v1
    spec:
      containers:
      - name: goversions-v1
        image: jorgeteixe/goversions:v1
        ports:
        - containerPort: 8090
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
---
kind: Service
apiVersion: v1
metadata:
  name: versions-v1-service
spec:
  selector:
    app: versions-v1
  ports:
    - port: 8090
