charla-teis-2/20-deploy-versions/20-normal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versions-v1-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  rules:
  - http:
      paths:
        - path: /versions              # 
          pathType: Exact
          backend:
            service:
              name: versions-v1-service
              port:
                number: 8090
