charla-teis-2/20-deploy-versions/40-canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versions-v2-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - http:
      paths:
        - path: /versions
          pathType: Exact
          backend:
            service:
              name: versions-v2-service
              port:
                number: 8090
